<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="www.justme.co.in.vendor.activity.ServiceDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Mayur B"
                    android:textColor="@color/black"
                    android:textSize="21dp" />

                <TextView
                    android:id="@+id/txt_creadit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="#AAAAAA" />

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="#AAAAAA" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="@color/colorGray1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="TOMORROW" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="10:12 AM"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_pannding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_complet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/red"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/places_cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_reject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/red"
                android:gravity="center"
                android:padding="10dp"
                android:text="Reject"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:id="@+id/lvl_location"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/customer_location"
                    android:textColor="#AAAAAA" />

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="ambika pinnacle, Mota Varachha, beside Lajamani Chowk, Surat, Gujarat 394101"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray1" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:elevation="10dp">

            <TextView
                android:id="@+id/txt_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/see_on_map"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray1" />

            <TextView
                android:id="@+id/txt_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/call_customer"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorGray1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/select_setvice"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/listaddon"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/lvl_addon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>
</ScrollView>