<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="15dp"
                android:layout_height="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:text="m"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="25dp" />

                    <LinearLayout
                        android:id="@+id/lvl_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="-15dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_profile_edit" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Name"
                            android:textColor="#AAAAAA" />

                        <EditText
                            android:id="@+id/ed_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:padding="5dp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:editable="false"
                        android:padding="5dp"

                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:editable="false"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="5dp"

                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Password"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Service"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:editable="false"
                        android:padding="5dp"

                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bio"
                        android:textColor="#AAAAAA" />

                    <EditText
                        android:id="@+id/ed_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="left|top"
                        android:padding="5dp"
                        android:minLines="5"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/btn_countinue"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
            <View
                android:layout_width="15dp"
                android:layout_height="220dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>